tests/baselines/reference/invalidTypeOfTarget.errors.txt
==== tests/cases/compiler/invalidTypeOfTarget.ts (10 errors) ====
    var x1: typeof {};
                   ~
!!! error TS1003: Identifier expected.
    var x2: typeof (): void;
                   ~
!!! error TS1003: Identifier expected.
                           ~
!!! error TS1005: '=>' expected.
    var x3: typeof 1;
                   ~
!!! error TS1003: Identifier expected.
    var x4: typeof '';
                   ~~
!!! error TS1003: Identifier expected.
    var x5: typeof [];
                   ~
!!! error TS1003: Identifier expected.
    var x6: typeof null;
                   ~~~~
!!! error TS1006: Identifier expected; 'null' is a keyword.
    var x7: typeof function f() { };
                   ~~~~~~~~
!!! error TS1006: Identifier expected; 'function' is a keyword.
    var x8: typeof /123/;
                   ~
!!! error TS1003: Identifier expected.
                         
!!! error TS1005: '}' expected.